more fixes to remove overflow from timesheets
git-svn-id: http://agilefant.googlecode.com/svn/trunk@1261 29784df9-99d5-7e28-3e6c-ac1830307ffc

--- a/web/static/css/import.css
+++ b/web/static/css/import.css
@@ -934,12 +934,6 @@ table.reportTable tr td.hourentry.first {
 }
 
 table.reportTable tr td.hourentry.second {
-	width:auto;
-	white-space:nowrap;
-}
-
-table.reportTable tr td.hourentry.third {
-	width:auto;
 	white-space:nowrap;
 }
 
